250921: 3d 뷰 설정